/*
In this exercise, your goal is to implement a FindMaximum RPC Bi-Directional Streaming API in a CalculatorService:

The function takes a stream of Request message that has
one integer, and returns a stream of Responses that
represent the current maximum between all these integers

Remember to first implement the service definition in a .proto file, alongside the RPC messages
Implement the Server code first
Test the server code by implementing the Client
Example:

The client will send a stream of number (1,5,3,6,2,20) and the server will respond with a stream of (1,5,6,20)


*/

syntax = "proto3";
package calculator;
option go_package="calculatorpb";

message Calculator {
  int32 first_num = 1;
  int32 second_num = 2;
}

message CalculateRequest {
  Calculator calculator = 1;
}

message CalculateResponse {
  int32 result = 1;
}

message DecomposeRequest {
  int32 number = 1;
}

message DecomposeResponse {
  int32 decomposed_num = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double ave_num = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 current_max_num = 1;
}

service CalculatorService {
  // Unary
  rpc Calculate (CalculateRequest) returns (CalculateResponse);

  // Server Streaming
  rpc DecomposeManyTimes(DecomposeRequest) returns (stream DecomposeResponse) {};

  // Client Streaming
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

  // BiDi Streaming
  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}
